# titanic-problem

./: README.md  pyproject.toml
cli/: ml_cli-0.1.0-py3-none-any.whl
cli_package/: ml_cli-0.1.0-py3-none-any.whl  ml_cli-0.2.0-py3-none-any.whl  ml_cli-0.3.0-py3-none-any.whl  ml_cli-0.4.0-py3-none-any.whl  ml_cli-0.4.1-py3-none-any.whl
data/evaluations/: eval.csv
data/feature_importances/: feature_importance.csv
data/models/: model
data/predictions/: prediction.csv
ml-cli-0.1.0/: PKG-INFO  README.md  pyproject.toml  setup.py
ml-cli-0.1.0/ml_cli/: cli.py
ml-cli-0.1.0/ml_cli/commands/: evaluate.py  predict.py  train.py
ml-cli-0.1.0/ml_cli/data/: make_dataset.py  preprocess_data.py
ml-cli-0.1.0/ml_cli/models/: xgb_model.py
ml-cli-0.1.0/ml_cli/utils/: logger.py  metrics.py
notebooks/: data_preparation.ipynb  exploratory_data_analysis.ipynb  output.ipynb
src/data/: check_data.py
src/utils/: visualization.py
