[tool.poetry]
name = "rappi-titanic-problem"
version = "0.1.0"
description = ""
authors = ["JoseGuillermoAraya <jose.araya@bci.cl>"]
readme = "README.md"
packages = [{include = "rappi_titanic_problem"}]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.0"
seaborn = "^0.12.2"
numpy = "^1.24.2"
pandas = "^1.5.3"
jupyter = "^1.0.0"
ml-cli = {path = "cli_package/ml-cli-0.3.0.tar.gz"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
