[tool.poetry]
name = "ml-cli"
version = "0.1.0"
description = "Simple CLI to train, evaluate and predict with a XGB model on the Titanic Problem"
authors = ["JoseGuillermoAraya <jose.araya@bci.cl>"]
readme = "README.md"
packages = [{include = "ml_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
joblib = "^1.2.0"
pandas = "^1.5.3"
xgboost = "^1.7.4"
logging = "^0.4.9.6"
scikit-learn = "^1.2.1"

[tool.poetry.scripts]
ml_cli = "ml_cli.cli:cli"
test = "scripts:test"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
